force-app/main/default/objects/PC_Service__c/fields/PC_Friday_Hours__c.field-meta.xml
<CustomField>
    <fullName>PC_Friday_Hours__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Friday Hours</label>
    <type>TextArea</type>
</CustomField>