force-app/main/default/objects/PC_Service__c/fields/PC_Operating_Hours__c.field-meta.xml
<CustomField>
    <fullName>PC_Operating_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Standard OperatingHours object. Likely not needed, can be removed later as we have a lookup field to the PC Operating Hours object</description>
    <label>Operating Hours Standard</label>
    <referenceTo>OperatingHours</referenceTo>
    <relationshipName>Services_Standard</relationshipName>
    <type>Lookup</type>
</CustomField>