force-app/main/default/objects/PC_Service__c/fields/PC_Saturday_Hours__c.field-meta.xml
<CustomField>
    <fullName>PC_Saturday_Hours__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Saturday Hours</label>
    <type>TextArea</type>
</CustomField>