force-app/main/default/objects/PC_Service__c/fields/PC_Service_Owner__c.field-meta.xml
<CustomField>
    <fullName>PC_Service_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Owner</label>
    <referenceTo>PC_Service_Team_Member__c</referenceTo>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>