force-app/main/default/objects/PC_Service__c/fields/PC_Territory__c.field-meta.xml
<CustomField>
    <fullName>PC_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory</label>
    <referenceTo>PC_Territory__c</referenceTo>
    <relationshipLabel>PC Services</relationshipLabel>
    <relationshipName>PC_Services</relationshipName>
    <type>Lookup</type>
</CustomField>