force-app/main/default/objects/PC_Service__c/listViews/My_Services.listView-meta.xml
<ListView>
    <fullName>My_Services</fullName>
    <columns>NAME</columns>
    <columns>PC_Operating_Hours_Lookup__c</columns>
    <columns>PC_Operating_Hours__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Services</label>
</ListView>